more robust swagger script
