# apps/api/swagger/swagger-output.json
@@ -7,7 +7,8 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5000/"
+      "url": "http://localhost:5000",
+      "description": "Local Development"
     }
   ],
   "paths": {
@@ -1076,6 +1077,15 @@
             "description": "Bad Gateway"
           }
         }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
